services & Networking/Ingress networking/[prod]ingress-wear-watch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2026-05-04T16:10:09Z"
  generation: 1
  name: ingress-wear-watch
  namespace: app-space
  resourceVersion: "2390"
  uid: a6f04c20-2cab-45c2-8159-e2c3f51d4c27
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: wear-service
            port:
              number: 8080
        path: /wear
        pathType: Prefix
      - backend:
          service:
            name: video-service
            port:
              number: 8080
        path: /stream
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 172.20.87.179
